--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = hypast
 version = 0.0.2
 author = Livia Rodrigues
-author email = l180545@dac.unicamp.br
+author_email = l180545@dac.unicamp.br
 description = Hypothalamus Automatic Segmentation Tool
 long_description = file: README.md
 
